fix: strange overlapping

--- a/common/style.css
+++ b/common/style.css
@@ -197,7 +197,7 @@ div.player_container div.detailed_modal {
   height: 90vh;
   bottom: -90vh;
   background-color: #333333;
-  z-index: 2;
+  z-index: 3;
   transition: bottom 0.3s;
   overflow-y: scroll;
 }
@@ -211,7 +211,7 @@ div.player_container div.detailed_modal_bg {
   left: 0px;
   width: 100%;
   height: 100%;
-  z-index: 0;
+  z-index: 2;
   background-color: #ffffff77;
   opacity: 0;
   transition: opacity 0.3s;
